# TwinNexus-Admittance-Platform

./: .gitignore  .gitmodules  LICENSE  README.md  ur5e_factory_calibration.yaml
10_src/: README.md  robot_calibration.yaml
10_src/src/: README.md
10_src/src/bimanual_ur5e_bringup/: CMakeLists.txt  README.md  package.xml
10_src/src/bimanual_ur5e_bringup/config/: ur5e_admittance_controller.yaml  ur5e_admittance_controller_left.yaml  ur5e_admittance_controller_right.yaml
10_src/src/bimanual_ur5e_bringup/launch/: _ur5e_admittance_arm.launch.py  _ur5e_arm.launch.py  boot_hw_bimanual.launch.py  boot_hw_left.launch.py  boot_hw_right.launch.py  realsense_cameras.launch.py  ur5e_TwinNexus_hwl.launch.py  ur5e_admittance_servo_teleop.launch.py  ur5e_control_mode.launch.py  ur5e_upstream_admittance.launch.py  ur5e_upstream_admittance_bimanual.launch.py
10_src/src/bimanual_ur5e_bringup/scripts/: admittance_keyboard_teleop.py  gello_bridge.py  moveit_servo_to_admittance.py  read_gello.py  return_home.py  set_servo_command_type.py  twinnexus_bridge.py
10_src/src/ur5e_admittance_control/: CMakeLists.txt  README.md  admittance_controller.xml  package.xml
10_src/src/ur5e_admittance_control/config/: admittance_params.yaml
10_src/src/ur5e_admittance_control/include/admittance_controller/: admittance_controller.hpp
10_src/src/ur5e_admittance_control/include/ur5e_admittance_control/: admittance_controller.hpp
10_src/src/ur5e_admittance_control/src/: admittance_controller.cpp
10_src/src/vla_interface_node/: README.md  package.xml  setup.cfg  setup.py
10_src/src/vla_interface_node/vla_interface_node/: Test_cameras.py  test_twinnexus_robot.py  twinnexus_robot.py
10_src/src/wsg32_driver/config/: wsg32_params.yaml
10_src/src/wsg32_driver/launch/: wsg32_dual.launch.py
10_src/src/wsg32_driver/wsg32_driver/: wsg32_node.py  wsg_tcp.py
20_docs/: README.md
30_data/: README.md
30_data/bimanual_Lilly_demo/meta/: stats.json
30_data/bimanual_box_001/meta/: info.json  stats.json
30_data/bimanual_demo/meta/: info.json  stats.json
30_data/bimanual_test/meta/: stats.json
30_data/bimanual_test_1works/meta/: stats.json
30_data/pick_place_001/meta/: info.json  stats.json  tasks.jsonl
30_data/pick_place_001_openpi/meta/: episodes.jsonl  episodes_stats.jsonl  info.json
30_data/pick_place_test/meta/: info.json  stats.json
60_scripts/: README.md  record_episodes.sh  twinnexus_record.py  twinnexus_record_bimanual.py  twinnexus_replay_bimanual.py
70_hardware/: README.md
70_hardware/cad/: soft_gripper_finger.3mf  wsg50_mount - finger_holder_left - finger_holder_left.stl  wsg50_mount - finger_holder_left.stl  wsg50_mount - finger_holder_right - finger_holder_right.stl  wsg50_mount - finger_holder_right.3mf  wsg50_mount - finger_holder_right.stl
70_hardware/cad/moveit-studio-ur5-realsense-camera-adapter-from-picknik-robotics-1/: picknik_ur5_realsense_camera_adapter_rev2.3mf  picknik_ur5_realsense_camera_adapter_rev2.SLDPRT
70_vla/: README.md  convert_twinnexus.py  openpi_changes.patch  serve.sh  train.sh  twinnexus_inference.py  twinnexus_policy.py
80_Docu/: README.md
80_Docu/figures/: bimanual_pick_place_demo.mov
