<?xml version="1.0"?>
<package format="3">
  <name>bimanual_ur5e_bringup</name>
  <version>0.0.0</version>
  <description>Launch and parameter package for the bimanual UR5e system.</description>
  <maintainer email="<TBD>"><TBD></maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
