<?xml version="1.0"?>
<package format="3">
  <name>bimanual_ur5e_bringup</name>
  <version>0.0.0</version>
  <description>Launch and parameter package for the bimanual UR5e system.</description>
  <maintainer email="todo@example.com">TBD</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>admittance_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>kinematics_interface</exec_depend>
  <exec_depend>kinematics_interface_kdl</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
