<?xml version="1.0"?>
<package format="3">
  <name>ur5e_admittance_control</name>
  <version>0.0.0</version>
  <description>Low-level admittance-control integration package for bimanual UR5e robots.</description>
  <maintainer email="<TBD>"><TBD></maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
