<?xml version="1.0"?>
<package format="3">
  <name>vla_interface_node</name>
  <version>0.0.0</version>
  <description>Python interface package for Pi0.5 VLA integration and data collection.</description>
  <maintainer email="<TBD>"><TBD></maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
